Version 0.2.4.1 (2018-05-11)
	bugfix, SQLSTATE[HY000] [2002] php_network_getaddresses: getaddrinfo failed: Name or service not known
Version 0.2.4 (2018-05-11)
	add, installer create sqlite database for heinercms
	bugfix, fixed bugs in installer
	update, tinymce/tinymce (4.7.11 => 4.7.12)
Version 0.2.3.1 (2018-05-07)
	update, update the configuration file for the installer
Version 0.2.3 (2018-05-04)
	added, sqlite database support for heinercms
	added, database debug options for developers
	bugfix, fixed bugs in public downloads section
	bugfix, fixed many many other minor bugs
	update, twbs/bootstrap (4.1.0 => 4.1.1)
	update, refactory database connection
Version 0.2.2 (2018-04-20)
	added, temporaly page delete function. this function not working for now
	bugfix, fixed many many other minor bugs
	update, twbs/bootstrap (4.0.0 => 4.1.0)
	update, tinymce/tinymce (4.7.10 => 4.7.11)
	update, sign has a new fresh style
	update, refactory software, rename functions, refactor routes, templates has new structure
	update, sites are called pages from now
Version 0.2.1 (2018-04-09)
	added, public downloads
	added, downloads settings
	update, many new translations
	update, installer writes downloads settings
	update, tinymce/tinymce (4.7.9 => 4.7.10)
	bugfix, fixed other minor bugs
	bugfix, public navigation shows no longer invisible content on public pages
	bugfix, fixed a bug in admin user page
	delete, obsolete database.inc.php file
Version 0.2.0 (2018-03-28)
	added, languages for the installer
	added, edit/add footer in general settings to change the footer in application
	bugfix, fixed many many other minor bugs
	update, clean code
	update, many new translations
	update, extend table settings -> row 'lang_short'
	update, extend and improve installer
Version 0.1.9 (2018-03-09)
	added, integrated public articles
	update, clean code
Version 0.1.8 (2018-03-07)
	update, tinymce/tinymce (4.7.7 => 4.7.9)
	update, components/jquery (3.2.1 => 3.3.1)
Version 0.1.7 (2018-03-07)