@@ -14,14 +14,14 @@ if (is_logged_in ()) {
     $content = filter_input(INPUT_POST, 'content');
     $visible = filter_input(INPUT_POST, 'visible');
 
-    $sql = "INSERT INTO `articles` (`title`, `content`, `visible`) VALUES (:title, :content, :visible)";
+    $sql = "INSERT INTO `articles` (`title`, `content`, `visibility`) VALUES (:title, :content, :visibility)";
 
     if(DB_DRIVER === 'sqlite') {
         $datetime = strftime('%Y-%m-%d %H:%M', time());
         $trash = 'false';
 
-        $sql = "INSERT INTO `articles` (`title`, `content`, `created_at`, `visible`, `trash`) 
-            VALUES (:title, :content, :created_at, :visible, :trash)";
+        $sql = "INSERT INTO `articles` (`title`, `content`, `created_at`, `visibility`, `trash`) 
+            VALUES (:title, :content, :created_at, :visibility, :trash)";
     }
 
     $pdo = getPdoConnection();
@@ -31,7 +31,7 @@ if (is_logged_in ()) {
 
         $stmt->bindParam(':title', $title);
         $stmt->bindParam(':content', $content);
-        $stmt->bindParam(':visible', $visible);
+        $stmt->bindParam(':visibility', $visible);
 
         if (DB_DRIVER == 'sqlite') {
             $stmt->bindParam(':created_at', $datetime);
